add docs and patch method for user
