# services/user/internal/controller/http/server/router.go
@@ -2,11 +2,12 @@ package server
 
 import (
 	"crypto/rsa"
+	"net/http"
+
 	"github.com/badtripdude/hackathon-sonnik-backend/services/user/internal/controller/http/handlers"
 	"github.com/badtripdude/hackathon-sonnik-backend/services/user/internal/service"
 	"github.com/badtripdude/hackathon-sonnik-backend/services/user/middleware"
 	"github.com/gorilla/mux"
-	"net/http"
 )
 
 func NewRouter(userSvc *service.UserService, pubKey *rsa.PublicKey) http.Handler {
@@ -18,6 +19,7 @@ func NewRouter(userSvc *service.UserService, pubKey *rsa.PublicKey) http.Handler
 	r.HandleFunc("/auth/refresh", h.Refresh).Methods("POST")
 	r.HandleFunc("/auth/logout", h.Logout).Methods("POST")
 	r.Handle("/auth/me", middleware.JWTMiddleware(pubKey)(h.Me)).Methods("GET")
+	r.Handle("/auth/user/{id}", middleware.JWTMiddleware(pubKey)(h.UpdateUser)).Methods("PATCH")
 
 	return r
 }
